# alitaOS

./: .gitignore  LICENSE  README.md  cleanup_legacy.sh  cleanup_legacy_windows.bat  compose.yaml  fix_browser_cache.py  install_mac_linux.sh  install_windows.bat  launch.sh  launch_streamlit.bat  launch_streamlit.sh  launch_streamlit_https.bat  launch_streamlit_https.sh  pyproject.toml  requirements.txt  run_tests.sh  test_voice_features.py
app/: alita_streamlit.py  realtime_proxy.py
app/api/: ollama_stream.py
app/components/: ai_settings.py  ollama_live_assistant.py
app/config/: realtime_instructions.txt  realtime_instructions_base.txt
app/scripts/: create_sample_db.py
app/tools/: __init__.py  browser.py  chart.py  database.py  email.py  image.py  linkedin.py  python_file.py  search.py  stock.py
app/utils/: ai_models.py  common.py
